# SinSR

./: .gitignore  pyproject.toml
scripts/: sr_volume.py
