[tool.poetry]
name = "sinsr"
version = "1.0.0"
description = "SinSR: Diffusion-Based Image Super-Resolution in a Single Step"
authors = ["Yufei Wang, Wenhan Yang, Xinyuan Chen, Yaohui Wang, Lanqing Guo, Lap-Pui Chau, Ziwei Liu, Yu Qiao, Alex C. Kot, Bihan Wen"]
readme = "README.md"
license = "LICENSE"
packages = [{include = "basicsr"}, {include = "ldm"}, {include = "models"}, {include = "utils"}, {include = "datapipe"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.1.1"
numpy = "^1.24.0"
opencv-python = ">=4.8.0"
matplotlib = ">=3.7.0"
timm = ">=0.9.0"
pandas = ">=2.0.0"
pillow = ">=10.0.0"
scikit-learn = ">=1.3.0"
scikit-image = ">=0.21.0"
lpips = ">=0.1.4"
loguru = ">=0.7.0"
omegaconf = ">=2.3.0"
six = ">=1.16.0"
tqdm = ">=4.66.0"
albumentations = ">=1.3.0"
einops = ">=0.7.0"
imageio = ">=2.31.0"
scipy = ">=1.9.0"
gradio = "3.50.0"
xformers = "0.0.23"
nibabel = "^5.3.3"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"